Fixing #2560 - changing z-index on class sequence-controls so we can see the controls on top of stream field menu

--- a/wagtail/wagtailadmin/static_src/wagtailadmin/scss/components/_streamfield.scss
+++ b/wagtail/wagtailadmin/static_src/wagtailadmin/scss/components/_streamfield.scss
@@ -144,7 +144,7 @@ li.sequence-member {
     position: absolute;
     top: -30px; 
     right: 0;
-    z-index: 1;
+    z-index: 6;
     overflow: visible;
     background-color: $color-input-focus;
     padding: 0 0 0 1em;
